# OLD-twizzler

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  setup.sh
LICENSES/: BSD-3-Clause.txt  header.c
arch/x86_64/: entry.c  include.mk  init.c  object.c  processor.c  thread.c  virtmem.c  vmx.c  x2apic.c
cmake/: cmake.toolchain.in  ports.cmake  rust.cmake  toolchain.cmake
core/: main.c  processor.c  schedule.c  spinlock.c  syscall.c
core/mm/: page.c  vmap.c
core/sys/: thread.c  thread_sync.c
doc/: building.txt
docs/: BUILD.md  Doxyfile.kernel
docs/kernel/: debug.md  init.md  intro.md  objects.md
include/: arena.h  clksrc.h  memory.h  object.h  secctx.h  spinlock.h  syscall.h  thread.h  time.h
machine/pc/: serial.c
ports/: CMakeLists.txt
ports/bash/support/: Makefile.in
projects/x86_64/: config.mk
src/: .clang-format  CMakeLists.txt  Doxyfile  Doxyfile.kernel  rustfmt.toml
src/boot/grub/: grub.cfg
src/drivers/e1000/: CMakeLists.txt  e1000.cpp  e1000.h
src/drivers/keyboard/: CMakeLists.txt  keyboard.c
src/drivers/nvme/: CMakeLists.txt  nvme.cpp  nvme.h
src/drivers/serial/: CMakeLists.txt  serial.c
src/kernel/: CMakeLists.txt  TODO
src/kernel/arch/x86_64/: acpi.c  apic.c  debug.c  entry.c  hpet.c  idt.c  include.cmake  init.c  intel_iommu.c  interrupt.S  ioapic.c  kconf.c  link.ld.in  madt.c  memory.c  nfit.c  object.c  objspace.c  pit.c  processor.c  rdrand.c  start.S  table.c  thread.c  virtmem.c  vmx.c  x2apic.c
src/kernel/arch/x86_64/include/arch/: interrupt.h  memory.h  object.h  objspace.h  processor.h  syscall.h  thread.h  x86_64-vmx.h
src/kernel/core/: clksrc.c  csprng.c  debug.c  instrument.c  interrupt.c  kc.c  kec.c  ksymbol.c  ksymbol_weak.c  main.c  nvdimm.c  panic.c  processor.c  rand.c  rwlock.c  schedule.c  spinlock.c  syscall.c  thread.c  timer.c  ubsan.c  unwind.c
src/kernel/core/asan/: asan.c
src/kernel/core/mm/: dlmalloc.c  kalloc.c  kheap.c  map.c  memory.c  objspace.c  page.c  pm_buddy.c  pmap.c  slab2.c  tmpmap.c  vmap.c
src/kernel/core/sys/: kconf.c  kec.c  object.c  thread.c  thread_sync.c
src/kernel/include/: __mm_bits.h  assert.h  debug.h  device.h  elf.h  init.h  interrupt.h  kalloc.h  kc.h  kec.h  kheap.h  kso.h  memory.h  object.h  objspace.h  page.h  pagevec.h  panic.h  pmap.h  printk.h  processor.h  queue.h  rand.h  range.h  rwlock.h  secctx.h  slab.h  slots.h  spinlock.h  string.h  syscall.h  system.h  thread.h  tmpmap.h  vmm.h
src/kernel/include/lib/: blake2.h  list.h  rb.h  ubsan.h  vector.h
src/kernel/lib/: blake2.c  memory.c  qsort.c  rb.c  vsprintk.c
src/kernel/machine/pc/: include.cmake  isa.c  pcie.c  ps2kbd.c  serial.c
src/kernel/machine/pc/include/machine/: isa.h  memory.h  pc-pcie.h
src/lib/ldscripts/: elf_x86_64_twizzler.x  elf_x86_64_twizzler.xs
src/lib/net/: CMakeLists.txt  buf.c  net.c  netaddr.c  twznet.pc.in
src/lib/net/include/nstack/: _types.h  net.h  nstack.h
src/lib/security/: CMakeLists.txt  sctx.c
src/lib/security/include/twz/sec/: security.h
src/lib/twix/: CMakeLists.txt  access.c  dir.c  fd.c  file.c  linux.c  process.c  rand.c  rw.c  syscall.c  syscall_defs.h  syscalls.h  thread.c  time.c  twix.pc.in
src/lib/twix/include/twix/: twix.h
src/lib/twix/v2/: conn.c  execvp.c  file.c  fork.c  info.c  mmap.c  poll.c  rw.c  signal.c  sys.h  thread.c  time.c  twix.c  v2.h
src/lib/twz/: CMakeLists.txt  alloc.c  bstream.c  driver.c  event.c  fault.c  hier.c  io.c  kso.c  libtwz.c  mutex.c  name.c  oa.c  object.c  pty.c  queue.c  seccall.c  thread.c  twz.pc.in  view.c
src/lib/twz-rust/: Cargo.toml
src/lib/twz-rust/src/: alloc.rs  arch.rs  bitflags.rs  bstream.rs  device.rs  event.rs  fault.rs  flexarray.rs  gate.rs  kso.rs  lib.rs  libtwz.rs  log.rs  mutex.rs  name.rs  obj.rs  persist.rs  pslice.rs  ptr.rs  queue.rs  refs.rs  sapi.rs  sys.rs  thread.rs  vec.rs
src/lib/twz-rust/src/arch/: fault.rs  gate.rs  mod.rs  sapi.rs  sys.rs  thread.rs
src/lib/twz-rust/src/kso/: mod.rs  view.rs
src/lib/twz/include-priv/: twz.h
src/lib/twz/include/twz/: _fault.h  _kso.h  _obj.h  _queue.h  _types.h  alloc.h  bstream.h  debug.h  event.h  gate.h  io.h  keyring.h  meta.h  mutex.h  name.h  obj.h  persist.h  ptr.h  pty.h  user.h  view.h
src/lib/twz/include/twz/driver/: msi.h  queue.h
src/lib/twz/include/twz/sys/: fault.h  key.h  kso.h  name.h  obj.h  ptr.h  sctx.h  slots.h  sync.h  sys.h  syscall.h  thread.h  view.h
src/lib/twz/include/twz/sys/dev/: bus.h  device.h  handler.h  memory.h  misc.h  msi.h  nic.h  pcie.h  processor.h  queue.h  system.h
src/lib/twzdev/: CMakeLists.txt  handler.c  twzdev.pc.in
src/lib/twzdev/include/twz/sys/dev/: device.h
src/lib/twzobj/: Cargo.toml
src/lib/twzobj/src/: bstream.rs  event.rs  io.rs  lib.rs  pty.rs  queue.rs
src/playground/: CMakeLists.txt  README.md  bstream-bench.c  example.c  logtest.c  net.cpp  netapi.c  queue.cpp  queue2.cpp  tos-bench.c  ut.c
src/playground/rust-test/: Cargo.toml
src/playground/rust-test/src/: main.rs
src/share/cmake/Modules/Platform/: Twizzler.cmake
testing/: queue.h
tools/: CMakeLists.txt  gen_ram_disk.py  prep.sh  rust-config.toml  start_qemu.sh
tools/utils/: CMakeLists.txt  appendobj.c  blake2.c  bsv.c  common.h  elfsplit.c  file2obj.c  hier.c  makekey.c  mkcap.c  mkdlg.c  mkimg.c  objstat.c  sctx.c  user.c
us/: Doxyfile  gen_root.py  include.mk  users.mk
us/docs/: Doxyfile
us/drivers/e1000/: e1000.cpp  e1000.h
us/include/logboi/: logboi.h
us/include/nstack/: _types.h  net.h  nstack.h
us/include/twix/: twix.h
us/include/twz/: _fault.h  _objid.h  _queue.h  _sctx.h  io.h  (+15 more)
us/libtwz/: alloc.c  bstream.c  event.c  fault.c  hier.c  include.mk  libtwz.c  name.c  oa.c  object.c  seccall.c  thread.c  view.c
us/libtwznet/: buf.c  include.mk  net.c  netaddr.c
us/libtwzsec/: include.mk  sctx.c
us/playground/: example.c  include.mk  logtest.c  net.cpp  netapi.c  ut.c
us/ports/: port.sh  tomcrypt.port  tommath.port
us/twix/: include.mk  process.c  rw.c  syscall.c  syscall_defs.h  syscalls.h
utils/: common.h  file2obj.c  makekey.c  objstat.c
(+10 files in other folders)
