[package]
name = "rust-test"
version = "0.1.0"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
twz = { path = "../../lib/twz-rust" }

[build]
rustflags = ["-C", "link-args=--no-gc-sections"]

